tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari
fn broken(value i64) -> i64 {
  return value;
}

fn after() -> i64 {
  return 7;
}
